--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 :root {
-  --ui-font-size: 32px;
+  --ui-font-size: 1.5rem;
   --primary-heading-font-size: calc(var(--ui-font-size) * 2.3);
   --input-padding: 0.5em 1em;
   --major-section-margin-size: 40px;
+}
+
+html {
+  font-size: 1vw;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
