--- a/style.css
+++ b/style.css
@@ -1,54 +1,114 @@
 :root {
-  --ui-font-size: 1.5rem;
+  --ui-font-size: 1.2rem;
   --primary-heading-font-size: calc(var(--ui-font-size) * 2.3);
-  --input-padding: 0.5em 1em;
+  --input-padding: 0.5em 0.5em;
   --major-section-margin-size: 40px;
-  --black-color: black;
+  --black-color: #242424;
   --white-color: white;
-  --main-grid-column: 1 / 4
+  --grey-color: #edebeb;
+  --dark-grey-color: grey;
+  --main-grid-column: 1 / 4;
+  --grid-template-columns-main: repeat(3, 1fr);
+  --global-font-size: 16px;
+
+  /* GRID */
+  --grid-template-rows-main: 15vh repeat(8, 10vh) ;
+
+  --header-grid-column: 1 / 4;
+  --header-grid-row: 1;
+
+  --calculator-screen-grid-column: 1 / 4;
+  --calculator-screen-grid-row: 1 / 3;
+
+  --expression-control-area-grid-column: 1 / 4;
+  --expression-control-area-grid-row: 2 ;
+
+  --decimal-precision-grid-column: 1 / 4;
+  --decimal-precision-grid-row: 4;
+
+  --result-area-grid-column: 1 / 4;
+  --result-area-grid-row: 5;
+
+  --input-pad-selection-fieldset-column: 1 / 4;
+  --input-pad-selection-fieldset-row: 5; 
+
+  --keypad-grid-column: 1 / 4;
+  --keypad-grid-row: 6 / 9;
+
+  --operator-grid-column: 3 ;
+  --operator-grid-row: 5 / 9;
 }
 
 @media only screen and (orientation: landscape) {
   :root {
-    --grid-template-columns: 1fr;
-    --main-grid-column: 1
+    --grid-template-columns-body: 1fr;
+    --main-grid-column: 1;
+    --global-font-size: 2vw;
   }
 }
 
 @media (min-width: 768px) {
   :root {
-    --grid-template-columns: 1fr 3fr 1fr;
-    --main-grid-column: 2
+    --grid-template-columns-body: 1fr 3fr 1fr;
+    --main-grid-column: 2;
+    --global-font-size: 1vw;
   }
 }
 
 html {
-  font-size: 1vw;
+  font-size: var(--global-font-size);
 }
-
-
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0 2rem;
   display: grid;
   justify-content: center;
-  grid-template-columns: var(--grid-template-columns);
-  background-color: var(--black-color);
+  grid-template-columns: var(--grid-template-columns-body);
   width: 100vw;
   height: 100vh;
   margin: 0;
   padding: 0;
 }
 
+nav {
+  background-color: var(--grey-color);
+  grid-column: 1 / 4;
+  padding: 1.5rem 1rem
+}
+
+strong.app-name {
+  font-weight: bolder;
+}
+
+.calculator-screen {
+  
+  grid-column: var(--calculator-screen-grid-column);
+  grid-row: var(--calculator-screen-grid-row);
+  border-radius: 10px;
+  background-color: var(--black-color);
+  padding: 1rem;
+  display: grid;
+}
+
 main {
   grid-column: var(--main-grid-column);
   background-color: var(--white-color);
   padding: 2rem;
+  display: grid;
+  grid-template-columns: var(--grid-template-columns-main);
+  grid-template-rows: var(--grid-template-rows-main);
+  height: 100vh;
+}
+
+header {
+  grid-column: var(--header-grid-column);
+  grid-row: var(--header-grid-row);
 }
 
 
 h1 {
+  
   font-size: var(--primary-heading-font-size);
   text-align: center;
 }
@@ -61,67 +121,134 @@ input {
 button {
   padding: var(--input-padding);
   font-size: var(--ui-font-size);
+  border-radius: 10px;
 }
 
 .operator-pad {
-  display: inline-block;
 }
 
 .input-area {
   margin-top: var(--major-section-margin-size);
-  display: flex;
 }
 
 .keypad {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: space-around;
-  margin-right: 2em;
+  grid-column: var(--keypad-grid-column);
+  grid-row: var(--keypad-grid-row);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 5px;
 }
 
 .operator-pad {
-  display: flex;
-  flex-flow: row wrap;
   align-items: center;
-  justify-content: space-around;
+  grid-column: var(--operator-grid-column);
+  grid-row: var(--operator-grid-row);
+  
 }
 
 
 .result-area {
   font-size: var(--ui-font-size);
-  margin-bottom: var(--major-section-margin-size);
+  /* margin-bottom: var(--major-section-margin-size); */
+  grid-column: var(--result-area-gird-column);
+  grid-row: var(--result-area-grid-row)
+
 }
 
-.expression-area {
+.expression-control-area {
   font-size: var(--ui-font-size);
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: var(--major-section-margin-size);
+  /* margin-bottom: var(--major-section-margin-size); */
+  grid-column: var(--expression-control-area-grid-column);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-content: center;
 }
 
 .keypad-btn {
-  flex: 1 25%;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 .operator-btn {
-  flex: 1 40%;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
-.expression-area-element {
-  margin-top: 10px;
+.expression-area-btn {
+  width: 90%;
+  align-self: center;
+  justify-self: center;
+}
+
+#expression {
+  color: var(--white-color);
+  font-size: 1.2rem;
 }
 
 #result {
+  align-self: flex-end;
   font-style: normal;
+  text-align: right;
+  font-size: 1.5rem;
+  color: var(--white-color);
+  font-size: 3em;
 }
 
 #decimal-precision-fieldset {
   border: none;
-  align-self: flex-start;
-  flex: 1;
+  grid-column: var(--decimal-precision-grid-column);
+  grid-row: var(--decimal-precision-grid-row);
+}
+
+#calculate-btn {
+  grid-column: 4 / 6
+}
+
+
+/* Styles from https://www.geeksforgeeks.org/how-to-create-toggle-switch-by-using-html-and-css/*/
+/* toggle in label designing */
+.toggle {
+  position : relative ;
+  display : inline-block;
+  width : 3rem;
+  height : 1rem;
+  background-color: var(--grey-color);
+  border-radius: 30px;
+  border: 2px solid var(--dark-grey-color);
+}
+     
+/* After slide changes */
+.toggle:after {
+  content: '';
+  position: absolute;
+  width: 0.95rem;
+  height: 0.95rem;
+  border-radius: 50%;
+  background-color: var(--dark-grey-color);
+  top: 1px;
+  left: 1px;
+  transition:  all 0.5s;
+}
+     
+     
+/* Checkbox checked effect */
+.checkbox:checked + .toggle::after {
+  left : 49px;
+  background-color: var(--grey-color);
+}
+     
+/* Checkbox checked toggle label bg color */
+.checkbox:checked + .toggle {
+  background-color: var(--dark-grey-color);
+  border: 2px solid var(--grey-color);
+}
+     
+/* Checkbox vanished */
+.checkbox {
+  display : none;
+}
+
+#input-pad-selection-fieldset {
+  grid-column: 1 / 4;
+
 }
