--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ strong.app-name {
   grid-row: var(--calculator-screen-grid-row);
   border-radius: var(--border-radius);
   background-color: var(--black-color);
+  color: var(--white-color);
+  font-style: italic;
   padding: 1rem;
   display: grid;
 }
@@ -188,8 +190,17 @@ button {
 }
 
 #expression {
+  background-color: inherit;
+  border: none; 
   color: var(--white-color);
+  font: inherit;
   font-size: 1.2rem;
+  resize: none;
+}
+
+#expression::-webkit-scrollbar-thumb {
+  background-color: var(--grey-color);
+  outline: 1px solid var(--white-color);
 }
 
 #result {
@@ -241,15 +252,15 @@ button {
   height: 0.95rem;
   border-radius: 50%;
   background-color: var(--dark-grey-color);
-  top: 1px;
-  left: 1px;
+  top: 0.06rem;
+  left: 0.06rem;
   transition:  all 0.5s;
 }
      
      
 /* Checkbox checked effect */
 .checkbox:checked + .toggle::after {
-  left : 49px;
+  left : 2rem;
   background-color: var(--grey-color);
 }
      
