--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 
   --border-radius: 10px;
 
+  --result-font-size: 2rem;
+
   /* GRID */
   --grid-template-rows-main: 15vh repeat(8, 6vh) ;
   --grid-row-gap-main: 2vh;
@@ -47,6 +49,7 @@
     --grid-template-columns-body: 1fr;
     --main-grid-column: 1;
     --global-font-size: 2vw;
+    --result-font-size: 2rem;
   }
 }
 
@@ -55,6 +58,7 @@
     --grid-template-columns-body: 1fr 3fr 1fr;
     --main-grid-column: 2;
     --global-font-size: 1vw;
+    --result-font-size: 3rem;
   }
 }
 
@@ -94,6 +98,8 @@ strong.app-name {
   font-style: italic;
   padding: 1rem;
   display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: 2fr 8fr;
 }
 
 main {
@@ -151,7 +157,7 @@ button {
   align-items: center;
   grid-column: var(--operator-grid-column);
   grid-row: var(--operator-grid-row);
-  
+
 }
 
 
@@ -181,6 +187,7 @@ button {
 .operator-btn {
   background-color: var(--dark-grey-color);
   color: var(--white-color);
+  font-size: 1rem;
 }
 
 button:disabled {
@@ -201,6 +208,8 @@ button:disabled {
   font: inherit;
   font-size: 1.2rem;
   resize: none;
+  grid-column: 1 / 3;
+  grid-row: 1;
 }
 
 #expression::-webkit-scrollbar-thumb {
@@ -212,9 +221,29 @@ button:disabled {
   align-self: flex-end;
   font-style: normal;
   text-align: right;
-  font-size: 1.5rem;
+  font-size: var(--result-font-size);
   color: var(--white-color);
-  font-size: 3em;
+  background-color: inherit;
+  border: none;
+  justify-self: fill;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+#result:focus {
+  overflow-x: scroll;
+}
+
+/* Chrome, Safari, Edge, Opera */
+#result::-webkit-outer-spin-button,
+#result::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+#result {
+  -moz-appearance: textfield;
 }
 
 #decimal-precision-fieldset {
